src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>AltScore__c</fullName>
        <description>used in the grading process</description>
        <label>Alt Score</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AlternatePhoneExtension__c</fullName>
        <label>Alternate Phone Extension</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AlternatePhoneNumber__c</fullName>
        <description>Alternate phone number from inquiry</description>
        <label>Alternate Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CAREStatus__c</fullName>
        <label>CARE Status</label>
        <picklist>
            <picklistValues>
                <fullName>PROS – Prospect</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__ProductInterest__c</fullName>
        <label>DupeBlocker - Ignore</label>
        <picklist>
            <picklistValues>
                <fullName>GC1000 series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5000 series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3000 series</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campus__c</fullName>
        <description>from the Inquiry Form</description>
        <label>Campus</label>
        <picklist>
            <picklistValues>
                <fullName>WGU- National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGU-TX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGU-IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGU-WA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieldRep__c</fullName>
        <label>Field Rep</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <defaultValue>&quot;NS&quot;</defaultValue>
        <description>The grade given by the grading process</description>
        <label>Grade</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MarketingProgram__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketing Program</label>
        <referenceTo>CareProgramMiddleEarth__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PScore__c</fullName>
        <description>used for the grading process</description>
        <label>P Score</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PostingScoreId__c</fullName>
        <label>Posting Score Id</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostingSource__c</fullName>
        <label>Posting Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryPhoneExtension__c</fullName>
        <label>Primary Phone Extension</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReadyForConvert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ready for Convert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReadyForGrade__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks the record as ready to be graded in the grade lead trigger for leads.</description>
        <inlineHelpText>All questions have been answered and this lead is ready to be graded.</inlineHelpText>
        <label>Ready For Grade</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReferID__c</fullName>
        <description>from the Inquiry Form</description>
        <label>Refer ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WhatProgram__c</fullName>
        <description>What Program do they have interest in?</description>
        <label>What Program</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>wguainfid__c</fullName>
        <externalId>true</externalId>
        <label>wguainfid</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>MarkBoninLeads</fullName>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.FIRST_NAME</columns>
        <columns>LEAD.LAST_NAME</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.MOBILE_PHONE</columns>
        <columns>MarketingProgram__c</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>FieldRep__c</columns>
        <columns>FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FieldRep__c</field>
            <operation>equals</operation>
            <value>Mark Bonin</value>
        </filters>
        <label>Mark Bonin Leads</label>
        <sharedTo>
            <role>AssociateEnrollmentCounselor</role>
            <role>EnrollmentManager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
</CustomObject>